bin/testsuite/tests/compiler/src/errors/compiler595.swg
#global testerror "Err0603"
func(op: string) toto() {}

#test
{
    toto'(0)()
}
